collapse issue fixed on bulk inner

--- a/sales/css/adm_styles.css
+++ b/sales/css/adm_styles.css
@@ -1074,7 +1074,65 @@ input {
     fill: #000 !important;
 }
 
+.accordion-button::after {
+    background-color: #CC0000;
+    border-radius: 100%;
+    color: #fff;
+    font-size: 14px;
 
+    background-size: 15px !important;
+    background-position: center !important;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+
+}
+
+.accordion-header {
+    background-color: #fff !important;
+    border-radius: 8px !important;
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: #fff !important;
+    border-radius: 8px !important;
+}
+
+button:focus:not(:focus-visible) {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.accordion-button:focus {
+    outline: none !important;
+}
+
+.accordion-button {
+    font-size: 16px !important;
+    font-weight: 500 !important;
+    color: #000 !important;
+    font-family: var(--font-secondary);
+}
+
+.add-another-button {
+    font-size: 12px !important;
+    font-weight: 500 !important;
+    color: var(--color-primary) !important;
+    font-family: var(--font-secondary);
+    background-color: transparent !important;
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+    padding-top: 0px;
+    margin-top: 0px !important;
+}
+
+.accordion-body .card-body {
+    padding: 0px !important;
+}
 
 /* .side-panel-collapse:not(.collapsed) span, .side-panel-collapse:not(.collapsed) i{
     color: var(--color-primary) !important;
